--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 unsplash_access_key="qVFDrmoDpKXmeqn1eVtYPM_eSG7WQ-h59wVOreVVWFY"
+base_url="https://api.unsplash.com/"
